# agent-connect-kit

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
alembic/: env.py
alembic/versions/: 0001_initial.py
scripts/: check_mcp.py
src/agent_connect_kit/: config.py  logging_config.py  main.py
src/agent_connect_kit/auth/: github_oauth.py  state.py  tokens.py
src/agent_connect_kit/connections/: routes.py
src/agent_connect_kit/connectors/: __init__.py  base.py
src/agent_connect_kit/connectors/discord/: __init__.py  client.py  connector.py
src/agent_connect_kit/connectors/discord/actions/: __init__.py  add_reaction.py  get_channel_messages.py  list_channels.py  list_guilds.py  send_message.py
src/agent_connect_kit/connectors/github/: __init__.py  client.py  connector.py
src/agent_connect_kit/connectors/github/actions/: __init__.py  add_labels.py  assign_issue.py  close_issue.py  comment_on_issue.py  create_issue.py  create_pr.py  get_commits.py  get_file_contents.py  get_issues.py  get_pr.py  get_user.py  list_branches.py  list_notifications.py  list_org_members.py  list_prs.py  list_repos.py  merge_pr.py  remove_labels.py  reopen_issue.py  search_code.py  star_repo.py  unstar_repo.py
src/agent_connect_kit/db/: __init__.py  models.py  session.py
src/agent_connect_kit/mcp/: __main__.py  server.py
src/agent_connect_kit/runtime/: context.py  errors.py  executor.py  routes.py
tests/: test_health.py
